# Extended_Moment-based_Kalman_Filter

./: .gitattributes  CMakeLists.txt  README.md  data_analyzer.ipynb  data_preprocessor.ipynb  main.cpp  simple_vehicle_nkf.cpp  simple_vehicle_nkf.h
MKF/results/robot2/: simple_vehicle_gaussian.csv
data/: data_analyzer.cpp  data_preprocessor.cpp  data_saver.cpp  read_data.cpp  Генерация данных для проекта.ipynb
data/synthetic_data/: Synthetic_Landmark_Groundtruth.csv  Synthetic_Robot1_Groundtruth.csv  Synthetic_Robot1_Measurements.csv  Synthetic_Robot1_Odometry.csv
include/: matplotlibcpp.h  utilities.h
include/filter/: simple_vehicle_nkf.h
results/robot2/: simple_vehicle_gaussian.csv
scripts/visualizer/: distribution_approximation.py  introduction.py  mobile_robot_visualizer.py  simple_vehicle_visualizer.py  utias_simulation_visualizer.py  visualize_progression.py
src/filter/: simple_vehicle_nkf.cpp
test/filter/: test_simple_vehicle_nkf.cpp
